<resources>
    <string name="app_name">ShopNest</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">EMAIL ID</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Dont have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="hint_password"> Password</string>
    <string name="confirm_Password">Confirm Password</string>
    <!--START-->
    <string name="pleasewait">Please wait...</string>
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="register_success">you are regisstered successfully</string>
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_storage_permission_denied">Storage permission denied</string>
    <string name="image_selection_failed">image selected</string>
    <string name="err_msg_enter_mobile_number">please enter mobile number</string>
    <string name="msg_profile_update_success">Profile update success</string>
    <string name="title_activity_dashboardactivity">MainActivity</string>
    <string name="title_Product">Product</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_Orders">Orders</string>
    <string name="Add_product">Add Product</string>
    <string name="please_click_back_again_to_exit">please click again to exit</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Address</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="action_add_product">Add product</string>
    <string name="title_add_product">Add Product</string>

    <string name="et_hint_product_title">Product Title</string>
    <string name="et_hint_product_price">Product Price ($)</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_quantity">Product Quantity</string>

    <string name="err_msg_select_product_image">Please select product image.</string>
    <string name="err_msg_enter_product_title">Please enter product title.</string>
    <string name="err_msg_enter_product_price">Please enter product price.</string>
    <string name="err_msg_enter_product_description">Please enter product description.</string>
    <string name="err_msg_enter_product_quantity">Please enter product quantity.</string>

    <string name="product_uploaded_success_message">Your product is uploaded successfully.</string>
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="no_dashboard_item_found">No items found!</string>

    <!--TODO Step 3: Add the string resources to the strings.xml file-->
    <!--START-->
    <string name="product_delete_success_message">Your product is deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_product_details">Product Details</string>
    <string name="lbl_product_description">Product description</string>
    <string name="lbl_product_details_stock_quantity">Stock quantity</string>
    <string name="btn_lbl_add_to_cart">Add to cart</string>
    <string name="success_message_item_added_to_cart">Product added to your cart</string>
    <string name="btn_lbl_go_to_cart">Go to cart</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="no_cart_item_found">No item found</string>
    <string name="title_my_cart">My cart</string>
    <string name="lbl_out_of_stock">Out of stock</string>
    <string name="msg_item_removed_successfully">Item removed successfully</string>
    <string name="title_address_list">Address List</string>
    <string name="no_address_found">No address foound</string>
    <string name="lbL_add_address">Add Address</string>
    <string name="title_add_address">Add Address</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">address</string>
    <string name="hint_zip_code">Zip Code</string>
    <string name="hint_additional_note">additional note</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_office">office</string>
    <string name="lbl_other">Other</string>
    <string name="hint_other_details">Other Details</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="err_msg_please_enter_full_name">Please enter full name</string>
    <string name="err_msg_please_enter_phone_number">please enter phone number</string>
    <string name="err_msg_please_enter_address">please enter address</string>
    <string name="err_msg_please_enter_zip_code">please enter zip code</string>
    <string name="err_your_address_added_successfully">Your Address added successfully</string>

    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="btn_lbl_update">UPDATE</string>

    <!--TODO Step 7: Add the string resources to the strings.xml file-->
    <!--START-->
    <string name="err_your_address_deleted_successfully">Your address is deleted successfully.</string>
    <string name="title_select_address">Select Address</string>
    <string name="msg_your_address_updated_successfully">Address updated successfully</string>
    <string name="title_checkout">Checkout</string>
    <string name="checkout_lbl_product_items">Product items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items reciepts</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivary</string>
    <string name="btn_lbl_place_order">Place Order</string>


</resources>